tests/ui/parser/unbalanced-doublequote-2.rs
//! regression test for issue <https://github.com/rust-lang/rust/issues/44078>
fn main() {
    "ğŸ˜Š""; //~ ERROR unterminated double quote
}
